refs #WH-352 Services für Refresh und RefreshIntervall erstellt: Diese in Komponenten injected, die auf die Change Observable subscriben.

--- a/src/app/shared/components/refresh-button/refresh-button.component.html
+++ b/src/app/shared/components/refresh-button/refresh-button.component.html
@@ -4,6 +4,7 @@
   triggers="mouseenter:mouseleave"
   [class.disabled]="refreshing"
   placement="left"
+  (click)="refresh()"
 >
   <i class="ion ion-md-refresh loading" [class.refreshing]="refreshing"></i><span *ngIf="text" class="ml-3">{{ text }}</span>
 </button>
