--- a/src/app/pages/executions/create-execution/create-execution.component.css
+++ b/src/app/pages/executions/create-execution/create-execution.component.css
@@ -1,7 +1,3 @@
-textarea {
-  height: 12em;
-}
-
 .value-label {
   padding-left: 12px;
 }
@@ -28,6 +24,7 @@ textarea {
   font-size: 0.8em;
 }
 
-::ng-deep .cdk-overlay-container, .cdk-global-overlay-wrapper {
+::ng-deep .cdk-overlay-container,
+.cdk-global-overlay-wrapper {
   z-index: 10001 !important;
 }
