--- a/src/app/pages/executions/create-execution/create-execution.component.html
+++ b/src/app/pages/executions/create-execution/create-execution.component.html
@@ -10,47 +10,93 @@
     <job-summary [job]="job"></job-summary>
   </div>
 
-  <form [formGroup]="executionForm">
-    <div class="form-group row">
-      <label for="priority" class="col-2 col-form-label text-right">Priority</label>
-      <div class="col-10">
-        <!-- <i class="ion ion-ios-star-outline"></i> -->
-        <app-switch formControlName="priority" id="priority" textOn="Yes" textOff="No"></app-switch>
-      </div>
-    </div>
-
-    <div class="form-group row">
-      <label for="plannedFor" class="col-2 col-form-label text-right">Planned for</label>
-      <input
-        formControlName="plannedFor"
-        [owlDateTimeTrigger]="dtPlannedFor"
-        [owlDateTime]="dtPlannedFor"
-        [min]="minPlannedFor"
-        class="form-control col-3 ml-3"
-      />
-    </div>
+  <div class="mb-3">
+    <button
+      type="button"
+      class="btn btn-outline-secondary mr-2"
+      (click)="newExecution.priority = !newExecution.priority"
+      ngbPopover="{{ newExecution.priority ? 'Remove Priority' : 'Set Priority' }}"
+      triggers="mouseenter:mouseleave"
+    >
+      <i [hidden]="newExecution.priority" class="ion ion-ios-star-outline"></i>
+      <i [hidden]="!newExecution.priority" class="ion ion-ios-star"></i>
+    </button>
+    <button
+      type="button"
+      class="btn btn-outline-secondary"
+      ngbPopover="Plan execution time"
+      triggers="mouseenter:mouseleave"
+      [owlDateTimeTrigger]="dtPlannedFor"
+    >
+      <i class="ion ion-ios-calendar" [class.planned]="newExecution.plannedFor"></i>
+    </button>
+    <input
+      [(ngModel)]="newExecution.plannedFor"
+      [owlDateTimeTrigger]="dtPlannedFor"
+      [owlDateTime]="dtPlannedFor"
+      [min]="minPlannedFor"
+      class="hide-planned-from"
+      (ngModelChange)="updateDisplayDates()"
+    />
     <owl-date-time #dtPlannedFor [showSecondsTimer]="true"></owl-date-time>
 
-    <div *ngIf="job.parametersClassName" class="form-group row">
-      <label for="parameters" class="col-2 col-form-label text-right">Parameters</label>
-      <div class="col-10">
-        <textarea class="form-control" type="text" id="parameters" formControlName="parameters" rows="{{textareaRows}}"></textarea>
-      </div>
-    </div>
-  </form>
-</div>
-
-<div class="modal-footer">
-  <div class="d-flex justify-content-start">
-    <button type="button" class="btn btn-outline-secondary mr-2" (click)="getRandomParameters()" [disabled]="loading">
-      Random Parameters
-    </button>
-    <button type="button" class="btn btn-outline-secondary mr-2" (click)="getLatestParameters()" [disabled]="loading">
-      Latest Parameters
-    </button>
+    <job-execution-timeline
+      class="ml-3"
+      *ngIf="displayPlannedFor"
+      [status]="'PLANNED'"
+      [createdAt]="displayCreatedAt"
+      [plannedFor]="displayPlannedFor"
+      [embedded]="true"
+      [hideCreatedAt]="true"
+    >
+    </job-execution-timeline>
+    <span
+      *ngIf="displayPlannedFor"
+      (click)="clearPlannedFor()"
+      ngbPopover="Clear planned execution time"
+      triggers="mouseenter:mouseleave"
+      class="click-action"
+    >
+      <i class="ion-md-close-circle"></i>
+    </span>
   </div>
-  <div class="d-flex justify-content-end">
+
+  <div *ngIf="job?.parametersClassName">
+    <div class="mb-3">
+      <textarea
+        type="text"
+        [(ngModel)]="newExecution.parameters"
+        rows="{{ textareaRows }}"
+        class="form-control"
+        placeholder="Parameters JSON"
+      ></textarea>
+    </div>
+    <div class="mb-3">
+      <button
+        type="button"
+        class="btn btn-outline-secondary mr-2"
+        (click)="getLatestParameters()"
+        [disabled]="loading"
+        ngbPopover="Retrieve the latest available parameters"
+        triggers="mouseenter:mouseleave"
+      >
+        Latest
+      </button>
+      <button
+        type="button"
+        class="btn btn-outline-secondary mr-2"
+        (click)="getRandomParameters()"
+        [disabled]="loading"
+        ngbPopover="Generate random parameters"
+        triggers="mouseenter:mouseleave"
+      >
+        Random
+      </button>
+    </div>
+  </div>
+
+  <div class="modal-footer d-flex justify-content-end">
     <button type="button" class="btn btn-outline-secondary mr-2" (click)="activeModal.dismiss()">Cancel</button>
-    <app-save-button (upload)="onExecute()" saveText="Create execution" [loading]="loading"> </app-save-button>
+    <app-save-button (upload)="createExecution()" [saveText]="'Create execution'" [loading]="loading"> </app-save-button>
   </div>
 </div>
