moved corresponding workhorse version from top to bottom

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,16 +11,10 @@
         >Dashboard</a
       >
       <a [routerLink]="['jobs']" routerLinkActive="active" class="nav-item nav-link" href="javascript:;">Jobs</a>
-      <!-- No global Executions-View?! -->
-      <!-- <a [routerLink]="['executions']" routerLinkActive="active" class="nav-item nav-link" href="javascript:;">Executions</a> -->
       <a [routerLink]="['schedules']" routerLinkActive="active" class="nav-item nav-link" href="javascript:;">Schedules</a>
       <a [routerLink]="['logs']" routerLinkActive="active" class="nav-item nav-link" href="javascript:;">Logs</a>
       <a [routerLink]="['config']" routerLinkActive="active" class="nav-item nav-link" href="javascript:;">Config</a>
     </div>
-  </div>
-  <div class="navbar-text">
-    <!-- corresponding workhorse version -->
-    <span class="version"> Workhorse Core {{ workhorseVersion }} <br />{{ persistenceName }} {{ persistenceVersion }}</span>
   </div>
   <div class="navbar-brand ml-3">
     <img class="random-workhorse" src="assets/horse-0{{ randomWorkhorse }}.png" />
@@ -31,4 +25,8 @@
 <div class="container-fluid mb-4 page">
   <app-breadcrumb></app-breadcrumb>
   <router-outlet></router-outlet>
+  <div>
+    <!-- corresponding workhorse version -->
+    <span class="version">Workhorse {{ workhorseVersion }} · {{ persistenceName }} {{ persistenceVersion }}</span>
+  </div>
 </div>
